cli/tests/testdata/test/ops_sanitizer_multiple_timeout_tests.out
Check [WILDCARD]/testdata/test/ops_sanitizer_multiple_timeout_tests.ts
running 2 tests from [WILDCARD]/testdata/test/ops_sanitizer_multiple_timeout_tests.ts
test test 1 ... FAILED ([WILDCARD])
test test 2 ... FAILED ([WILDCARD])

failures:

test 1
Test case is leaking async ops.

- 2 async operations to sleep for a duration were started in this test, but never completed. This is often caused by not cancelling a `setTimeout` or `setInterval` call. The operations were started here:
    at [WILDCARD]
    at setTimeout ([WILDCARD])
    at test ([WILDCARD]/testdata/test/ops_sanitizer_multiple_timeout_tests.ts:4:3)
    at [WILDCARD]/testdata/test/ops_sanitizer_multiple_timeout_tests.ts:8:27
    at [WILDCARD]

    at [WILDCARD]
    at setTimeout ([WILDCARD])
    at test ([WILDCARD]/testdata/test/ops_sanitizer_multiple_timeout_tests.ts:5:3)
    at [WILDCARD]/testdata/test/ops_sanitizer_multiple_timeout_tests.ts:8:27
    at [WILDCARD]

test 2
Test case is leaking async ops.

- 2 async operations to sleep for a duration were started in this test, but never completed. This is often caused by not cancelling a `setTimeout` or `setInterval` call. The operations were started here:
    at [WILDCARD]
    at setTimeout ([WILDCARD])
    at test ([WILDCARD]/testdata/test/ops_sanitizer_multiple_timeout_tests.ts:4:3)
    at [WILDCARD]/testdata/test/ops_sanitizer_multiple_timeout_tests.ts:10:27
    at [WILDCARD]

    at [WILDCARD]
    at setTimeout ([WILDCARD])
    at test ([WILDCARD]/testdata/test/ops_sanitizer_multiple_timeout_tests.ts:5:3)
    at [WILDCARD]/testdata/test/ops_sanitizer_multiple_timeout_tests.ts:10:27
    at [WILDCARD]

failures:

	test 1
	test 2

test result: FAILED. 0 passed; 2 failed; 0 ignored; 0 measured; 0 filtered out ([WILDCARD])

error: Test failed
